--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -39,6 +39,7 @@
     "@types/selenium-webdriver": "^2.53.33",
     "canonical-path": "0.0.2",
     "concurrently": "^3.1.0",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-sourcemaps": "^1.9.1",
