--- a/src/Server/HostDesarrollo/HostDesarrollo.csproj
+++ b/src/Server/HostDesarrollo/HostDesarrollo.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AngularWebServer\Startup.cs" />
+    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="Configuracion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
