--- a/src/Client/.vscode/settings.json
+++ b/src/Client/.vscode/settings.json
@@ -2,7 +2,8 @@
 {
   "files.exclude": {
     "**/*.js": { "when": "$(basename).ts" },
-    "**/*.map": true
+    "**/*.map": true,
+    "**/*.css": { "when": "$(basename).scss" }
   }
 ,
 "typescript.tsdk": "./node_modules/typescript/lib"
