--- a/src/Server/HostDesarrollo/packages.config
+++ b/src/Server/HostDesarrollo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibLog" version="4.2.6" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net461" />
