--- a/src/Server/Seguridad/packages.config
+++ b/src/Server/Seguridad/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="IdentityModel" version="1.9.2" targetFramework="net461" />
   <package id="IdentityServer3.AccessTokenValidation" version="2.13.0" targetFramework="net461" />
+  <package id="LibLog" version="4.2.6" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
