intento de crear modulos de cada componente del template

--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-quickstart",
+  "name": "baak",
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
@@ -18,23 +18,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~2.2.0",
-    "@angular/compiler": "~2.2.0",
-    "@angular/core": "~2.2.0",
-    "@angular/forms": "~2.2.0",
-    "@angular/http": "~2.2.0",
-    "@angular/platform-browser": "~2.2.0",
-    "@angular/platform-browser-dynamic": "~2.2.0",
-    "@angular/router": "~3.2.0",
-    "angular-in-memory-web-api": "~0.1.15",
-    "jquery": "^3.1.1",
+    "@angular/common": "^2.3.0",
+    "@angular/compiler": "^2.3.0",
+    "@angular/core": "^2.3.0",
+    "@angular/forms": "^2.3.0",
+    "@angular/http": "^2.3.0",
+    "@angular/platform-browser": "^2.3.0",
+    "@angular/platform-browser-dynamic": "^2.3.0",
+    "@angular/router": "^3.3.0",
+    "angular-in-memory-web-api": "~0.1.17",
+    "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
-    "systemjs": "0.19.40",
-    "core-js": "^2.4.1",
+    "jquery": "^3.1.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.26"
+    "rxjs": "^5.0.0-rc.4",
+    "systemjs": "0.19.40",
+    "typescript": "^2.1.4",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.36",
