--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -12,7 +12,8 @@
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "test-once": "tsc && karma start karma.conf.js --single-run",
     "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "tsc:w": "tsc -w",
+    "gulp": "gulp"
   },
   "keywords": [],
   "author": "",
@@ -26,14 +27,14 @@
     "@angular/platform-browser": "^2.3.0",
     "@angular/platform-browser-dynamic": "^2.3.0",
     "@angular/router": "^3.3.0",
-    "angular-in-memory-web-api": "~0.1.17",
+    "angular-in-memory-web-api": "0.2.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
     "jquery": "^3.1.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-rc.4",
-    "systemjs": "0.19.40",
+    "rxjs": "5.0.2",
+    "systemjs": "0.19.41",
     "typescript": "^2.1.4",
     "zone.js": "^0.7.2"
   },
@@ -52,7 +53,7 @@
     "gulp-typescript": "^3.1.3",
     "gulp-uglify": "^2.0.0",
     "http-server": "^0.9.0",
-    "jasmine-core": "~2.4.1",
+    "jasmine-core": "2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
@@ -60,13 +61,13 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
-    "protractor": "4.0.9",
+    "protractor": "4.0.14",
     "rimraf": "^2.5.4",
     "systemjs-builder": "^0.15.34",
     "systemjs-plugin-json": "^0.2.2",
-    "tslint": "^3.15.1",
+    "tslint": "4.2.0",
     "typescript": "^2.0.10",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "11.1.0"
   },
   "repository": {}
 }
