--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ title                    : "Baak"
 title_separator          : "-"
 name                     : "Baak"
 description              : "Backend Project."
-url                      : "http://miguelerm.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://miguelerm.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/baak" # the subpath of your site, e.g. "/blog"
 repository               : "miguelerm/baak" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
