fixed github link

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -89,7 +89,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : https://github.com/miguelerm/baak
+  github           : "miguelerm/baak"
   google_plus      :
   keybase          :
   instagram        :
